--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jshint-stylish": "^0.2.0",
     "gulp-load-plugins": "^0.5.1",
     "gulp-plumber": "^0.6.2",
-    "gulp-istanbul": "~0.3.1"
+    "gulp-istanbul": "~0.3.1",
+    "gulp-jsdoc": "~0.1.4"
   },
   "scripts": {
     "test": "gulp test"
